# solana-core

./: README.md
anchor-movie-review/: Anchor.toml  package.json
anchor-movie-review/programs/anchor-movie-review/: Cargo.toml
anchor-movie-review/programs/anchor-movie-review/src/: lib.rs
anchor-movie-review/tests/: anchor-movie-review.ts
anchor-nft-staking/: Anchor.toml  package.json
anchor-nft-staking/tests/: anchor-nft-staking.ts
anchor-solana-movie-review-frontend/: README.md  package.json
anchor-solana-movie-review-frontend/components/: AppBar.tsx  Card.tsx  CommentList.tsx  Form.tsx  MovieList.tsx  ReviewDetail.tsx
anchor-solana-movie-review-frontend/context/: WalletContextProvider.tsx
anchor-solana-movie-review-frontend/pages/: _app.tsx
buildoors-staking/: .env.local.example  package-lock.json  package.json
candy-machine-ui/: .eslintrc.js  package-lock.json
candy-rewards/: .env  next.config.js  package.json  tsconfig.json
candy-rewards/components/: Connected.tsx  (+4 more)
candy-sugar/: README.md  cache.json  config.json  package.json
counter-anchor/: Anchor.toml
grizzlycoin/: .gitignore  README.md  package-lock.json  package.json
hello-anchor/: Anchor.toml
local-program/: .gitignore  Cargo.toml
movie-review-comments/: Cargo.toml  README.md
movie-review-comments/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
nft-minter/: package.json
nifty/: README.md  package-lock.json  package.json
shipoorcoin/: README.md  package-lock.json  package.json  tsconfig.json
smdb-src/: error.rs  processor.rs
solana-display-nfts-frontend/: package.json
solana-intro-client/: package-lock.json  package.json
solana-intro-frontend/: README.md  package.json  tsconfig.json
solana-movie-frontend/: package-lock.json  package.json
solana-ping-frontend/: package.json
solana-student-intro-program/: Cargo.toml
solana-student-intro-program/src/: error.rs  instruction.rs  processor.rs  state.rs
solana-student-intros-frontend/: package-lock.json  package.json
(+93 files in other folders)
