[package]
name = "movie-review-comments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program="1.15.2"
borsh="0.9.3"
thiserror="1.0.38"
spl-token={version= "3.5.0", features=["no-entrypoint"]}
spl-associated-token-account={version="1.1.2", features=["no-entrypoint"]}

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "1.15.2"
solana-sdk = "1.15.2"

[lib]
crate-type=["cdylib", "lib"]