[package]
name = "solana-student-intro-program"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.15.2"
borsh = "0.9.3"
thiserror = "1.0.38"
spl-token={version= "3.5.0", features=["no-entrypoint"]}
spl-associated-token-account={version="1.1.2", features=["no-entrypoint"]}

[lib]
crate-type = ["cdylib", "lib"]